Single responsibility principle and open/closed principle

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>See every lesson's code examples on GitHub branches.</h2>
     <h2>Each branch is a separate lesson.</h2>
     <script src="script.js" defer type="module"></script>
+    <script src="oopPrinciples.js" defer type="module"></script>
   </body>
 </html>
