JavaScript OOP summary

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>This repo contains The Odin Project lesson's code examples</h2>
     <h2>See every lesson's code examples on GitHub branches.</h2>
     <h2>Each branch is a separate lesson.</h2>
-    <script src="script.js" defer type="module"></script>
-    <script src="oopPrinciples.js" defer type="module"></script>
+    <!-- <script src="script.js" defer type="module"></script> -->
+    <script src="./oopPrinciples.js"></script>
   </body>
 </html>
