Some transition practices

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <h1>The Odin Project Journey</h1>
-    <h2>This repo contains The Odin Project lesson's code examples</h2>
-    <h2>See every lesson's code examples on GitHub branches.</h2>
-    <h2>Each branch is a separate lesson.</h2>
+
+    <div class="container">
+      <div class="child">Hello World!</div>
+    </div>
     <script src="script.js" defer type="module"></script>
   </body>
 </html>
