--- a/base/index.html
+++ b/base/index.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Odin Project Journey</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <h1>The Odin Project Journey</h1>
 
-    <div class="container">
-      <div class="child">Hello World!</div>
-    </div>
-    <script src="script.js" defer type="module"></script>
+    <script src="./script.js" defer type="module"></script>
   </body>
 </html>
