--- a/dynamicUI/index.html
+++ b/dynamicUI/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>The Odin Project Journey</h1>
+    <h1 class="hero__title">Transition and Animation</h1>
+
+    <div class="container">
+      text behind
+      <div class="child">Transition</div>
+    </div>
 
     <script src="./script.js" defer type="module"></script>
   </body>
