--- a/dynamicUI/index.html
+++ b/dynamicUI/index.html
@@ -10,9 +10,15 @@
   <body>
     <h1 class="hero__title">Transition and Animation</h1>
 
+    <!-- transition -->
     <div class="container">
       text behind
       <div class="child">Transition</div>
+    </div>
+
+    <!-- animation -->
+    <div class="animation__parent">
+      <div class="animation__child">Animation</div>
     </div>
 
     <script src="./script.js" defer type="module"></script>
