Animation appeat from scratch

--- a/dynamicUI/index.html
+++ b/dynamicUI/index.html
@@ -21,6 +21,9 @@
       <div class="animation__child">Animation</div>
     </div>
 
+    <!-- appear -->
+    <div class="result"></div>
+
     <script src="./script.js" defer type="module"></script>
   </body>
 </html>
