Implement mobile menu

--- a/dynamicUI/index.html
+++ b/dynamicUI/index.html
@@ -24,6 +24,9 @@
     <!-- appear -->
     <div class="result"></div>
 
+    <a href="./dropdown.html">Drop-down menu</a>
+    <a href="./mobilemenu.html">Mobile menu</a>
+
     <script src="./script.js" defer type="module"></script>
   </body>
 </html>
