--- a/dynamicUI/mobilemenu.html
+++ b/dynamicUI/mobilemenu.html
@@ -87,7 +87,8 @@
         flex-direction: column;
         align-items: start;
         gap: 2rem;
-        padding: 2rem;
+        padding: 4rem;
+        margin-top: 6rem;
       }
 
       header > button {
